--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inspiration&family=Inter:wght@100&display=swap");
+
 .App {
   text-align: center;
 }
